immutable-processor/src/test/resources/test/type/error/InterfacePrivateNested.java
package test.type.error;

import org.example.immutable.Immutable;

public class InterfacePrivateNested {

    private interface Private {

        @Immutable
        interface Nested {}
    }
}
